--- a/i3blocks-hs-contrib.cabal
+++ b/i3blocks-hs-contrib.cabal
@@ -55,11 +55,11 @@ executable Cpu
 
 executable DateTime
   hs-source-dirs:      app
-  main-is:             Cpu.hs
+  main-is:             DateTime.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
-                     , text
                      , turtle
+                     , time
   default-language:    Haskell2010
 
 executable Docker
