--- a/i3blocks-hs-contrib.cabal
+++ b/i3blocks-hs-contrib.cabal
@@ -107,6 +107,15 @@ executable Wifi
                      , text
   default-language:    Haskell2010
 
+executable Ip 
+  hs-source-dirs:      app
+  main-is:             Ip.hs
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  build-depends:       base
+                     , turtle
+                     , text
+  default-language:    Haskell2010
+
 test-suite i3blocks-hs-contrib-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
