--- a/i3blocks-hs-contrib.cabal
+++ b/i3blocks-hs-contrib.cabal
@@ -98,11 +98,10 @@ executable Bitcoin
       aeson <1.5
     , attoparsec <0.14
     , base >=4.3 && <5
-    , lens <4.2
-    , lens-aeson <1.1
     , text <1.3
     , turtle <1.6
-    , wreq <0.5
+    , http-client < 0.7
+    , http-client-tls < 0.4
   default-language: Haskell2010
 
 executable Cpu
